# llm-agent

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  TODO.md  agent.py  agent_explanation.md  agent_improvements.md  pyproject.toml
.skills/doc-coauthoring/: SKILL.md
.skills/docx/: SKILL.md
.skills/imagegen/: SKILL.md
.skills/mcp-builder/: SKILL.md
.skills/pdf/: SKILL.md
.skills/pptx/: SKILL.md
.skills/skill-creator/: SKILL.md
.skills/web-artifacts-builder/: SKILL.md
.skills/webapp-testing/: SKILL.md
.skills/xlsx/: SKILL.md
docs/: agent-flow-explained.md  agent_explanation.md  agent_improvements.md  codebase-study.md  coding-agent-improvements.md  conversation-data-structure.md  tool-comparison-plans.md  tool-plan-ask-user.md  tool-plan-delegation.md  tool-plan-file-mutation.md  tool-plan-file-reading-and-navigation.md  tool-plan-shell-and-background-execution.md  web-search-approaches.md
llm_agent/: __init__.py  agent.py  agents.py  cli.py  config.py  context.py  debug.py  display.py  formatting.py  gemini_agent.py  mcp_client.py  models.py  ollama_agent.py  openai_agent.py  persistence.py  session.py  skills.py  system_prompt.txt  tui.py
llm_agent/tools/: __init__.py  apply_patch.py  ask_user.py  base.py  check_task.py  delegate.py  edit_file.py  file_outline.py  glob_files.py  list_directory.py  lsp_navigate.py  read_file.py  read_many_files.py  read_url.py  run_command.py  search_files.py  start_session.py  web_search.py  write_file.py  write_stdin.py
tests/: conftest.py  test_agents.py  test_cli_utils.py  test_config.py  test_context.py  test_debug.py  test_display.py  test_formatting.py  test_is_dangerous.py  test_models.py  test_persistence.py  test_session.py  test_skills.py
tests/integration/: test_agent_turn.py  test_mcp_registration.py  test_ollama.py  test_subagent.py  test_trim_conversation.py
tests/tools/: conftest.py  test_apply_patch.py  test_ask_user.py  test_check_task.py  test_delegate.py  test_edit_file.py  test_file_outline.py  test_glob_files.py  test_list_directory.py  test_lsp_navigate.py  test_read_file.py  test_read_many_files.py  test_read_url.py  test_run_command.py  test_search_files.py  test_start_session.py  test_tool_dispatch.py  test_web_search.py  test_write_file.py  test_write_stdin.py
