[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-agent"
dynamic = ["version"]
description = "A Unix CLI agent powered by Claude"
requires-python = ">=3.9"
dependencies = ["anthropic"]

[project.optional-dependencies]
vertex = ["anthropic[vertex]"]
gemini = ["google-genai"]
openai = ["openai"]
all = ["anthropic[vertex]", "google-genai", "openai"]

[project.scripts]
llm-agent = "llm_agent.cli:main"

[tool.setuptools.dynamic]
version = {attr = "llm_agent.VERSION"}

[tool.setuptools.package-data]
llm_agent = ["system_prompt.txt"]
