[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-agent"
dynamic = ["version"]
description = "A Unix CLI agent powered by Claude"
requires-python = ">=3.9"
dependencies = ["anthropic", "pyyaml"]

[project.optional-dependencies]
vertex = ["anthropic[vertex]"]
gemini = ["google-genai"]
openai = ["openai"]
tui = ["textual>=1.0"]
mcp = ["mcp>=1.0"]
all = ["anthropic[vertex]", "google-genai", "openai", "textual>=1.0", "mcp>=1.0"]

[project.scripts]
llm-agent = "llm_agent.cli:main"

[tool.setuptools.packages.find]
include = ["llm_agent*"]

[tool.setuptools.dynamic]
version = {attr = "llm_agent.VERSION"}

[tool.setuptools.package-data]
llm_agent = ["system_prompt.txt"]
